[tool.poetry]
name = "langchain-equity-news-research"
version = "0.1.0"
description = ""
authors = ["nshian <ianng800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.1.11"
unstructured = "^0.12.6"
libmagic = "^1.0"
python-magic = "^0.4.27"
python-magic-bin = "^0.4.14"
faiss-cpu = "^1.8.0"
sentence-transformers = "^2.5.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
langchain-openai = "^0.0.8"
openai = "^1.14.0"
streamlit = "^1.32.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
